# actix-web-api

./: README.md
actix-logger-server/: Cargo.toml  README.md
actix-logger-server/src/: handlers.rs  main.rs  middleware.rs
actix_all_routes/: Cargo.toml  README.md
actix_all_routes/src/: main.rs
actix_jwt_api/: Cargo.toml  README.md  docker-compose.yml  test_script.sh
actix_jwt_api/src/: database.rs  errors.rs  handlers.rs  main.rs  models.rs
actix_swagger_demo/: Cargo.toml  README.md
actix_swagger_demo/src/: main.rs
actix_todo_sqlx/: .gitignore  Cargo.toml  README.md  docker-compose.yml  test_api.sh
actix_todo_sqlx/src/: database.rs  errors.rs  handlers.rs  main.rs  models.rs
actix_validate_api/: Cargo.toml  README.md
actix_validate_api/src/: main.rs
actix_web_demo/: Cargo.toml  README.md  test_concurrency.sh
actix_web_demo/src/: main.rs
my_actix_app/: README.md
my_app/: Cargo.toml  README.md
rate_limiter_app/: Cargo.toml  README.md
rate_limiter_app/src/: main.rs
todo-actix/: Cargo.toml  README.md
todo-actix/src/: main.rs
