[package]
name = "actix-logger-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"