[package]
name = "actix_swagger_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "5.3.1", features = ["uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }


