[package]
name = "actix_validate_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
